fixed spacing

--- a/SmartSaver.MVC/wwwroot/css/generalDesign.css
+++ b/SmartSaver.MVC/wwwroot/css/generalDesign.css
@@ -5,7 +5,6 @@
     color: white;
 }
 
-
 input[type="date"]::before {
     color: #999999;
     content: "Select date";
@@ -37,14 +36,9 @@ input[type="date"]:valid::before {
     padding: 10px;
 }
 
-.login-block {
+.auth-block {
     margin: 30px auto;
     min-height: 93.6vh
-}
-
-.login-block .auth-box {
-    margin: 20px auto 0;
-    max-width: 450px !important
 }
 
 .card {
@@ -149,4 +143,8 @@ input[type="date"]:valid::before {
     flex-grow: 1;
     margin: 0 15px;
     text-align: center
+}
+
+.pb-15 {
+    padding-bottom: 150px;
 }
